--- a/RevViews/RevViews/Views/Restaurants/Details.cshtml
+++ b/RevViews/RevViews/Views/Restaurants/Details.cshtml
@@ -72,3 +72,4 @@
     @Html.ActionLink("Edit", "Edit", new { id = Model.RestaurantID }) |
     @Html.ActionLink("Back to List", "Index")
 </p>
+@Html.Partial("_ReviewsByIDToList", (IEnumerable<RevViews.Models.Review>)@ViewBag.rev)
