--- a/RevViews/RevViews/Views/Restaurants/Details.cshtml
+++ b/RevViews/RevViews/Views/Restaurants/Details.cshtml
@@ -17,6 +17,14 @@
         <dd>
             @Html.DisplayFor(model => model.RestaurantName)
         </dd>
+        
+        <dt>
+            @Html.DisplayNameFor(model => model.Rating)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.Rating)
+        </dd>
 
         <dt>
             @Html.DisplayNameFor(model => model.AddressLineOne)
