--- a/RevViews/RevViews/Views/Shared/_ReviewsByIDToList.cshtml
+++ b/RevViews/RevViews/Views/Shared/_ReviewsByIDToList.cshtml
@@ -1,6 +1,6 @@
-﻿@model IEnumerable<RevViews.Models.Review>
+﻿@model IEnumerable<Review>
 @{
-    var reviews = (IEnumerable<RevViews.Models.Review>) @ViewBag.rev;
+    var reviews = (IEnumerable<Review>) @ViewBag.rev;
 }
 
 <table>
