--- a/RevViews/RevViews/Views/Restaurants/Details.cshtml
+++ b/RevViews/RevViews/Views/Restaurants/Details.cshtml
@@ -1,4 +1,4 @@
-﻿@model RevViews.Models.Restaurant
+﻿@model Restaurant
 
 @{
     ViewBag.Title = "Details";
@@ -9,6 +9,10 @@
 <div>
     <h4>Restaurant</h4>
     <hr />
+    <p>
+        @Html.ActionLink("Edit", "Edit", new { id = Model.RestaurantID }) |
+        @Html.ActionLink("Back to List", "Index")
+    </p>
     <dl class="dl-horizontal">
         <dt>
             @Html.DisplayNameFor(model => model.RestaurantName)
@@ -27,7 +31,7 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.AddressLineOne)
+            Address
         </dt>
 
         <dd>
@@ -35,27 +39,10 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.City)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.City)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.StateCode)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.StateCode)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.PostalCode)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.PostalCode)
+            @Html.DisplayFor(model => model.City), @Html.DisplayFor(model => model.StateCode) @Html.DisplayFor(model => model.PostalCode)
         </dd>
 
         <dt>
@@ -76,8 +63,5 @@
 
     </dl>
 </div>
-<p>
-    @Html.ActionLink("Edit", "Edit", new { id = Model.RestaurantID }) |
-    @Html.ActionLink("Back to List", "Index")
-</p>
+
 @Html.Partial("_ReviewsByIDToList", (IEnumerable<RevViews.Models.Review>)@ViewBag.rev)
