--- a/RevViews/RevViews/Views/Restaurants/Index.cshtml
+++ b/RevViews/RevViews/Views/Restaurants/Index.cshtml
@@ -3,6 +3,7 @@
 @{
     ViewBag.Title = "Index";
 }
+@Styles.Render("~/Content/PagedList")
 
 <form method="get" action="@Url.Action("Index")">
     <input type="search" name="search" />
@@ -17,7 +18,7 @@
         <th>
             @Html.ActionLink("Restaurant Name", "Index", new { sort = ViewBag.NameSortParm, search = ViewBag.CurrentSearch })
         </th>
-        
+
         <th>
             @Html.ActionLink("Rating", "Index", new { sort = ViewBag.RatingSortParm, search = ViewBag.CurrentSearch })
         </th>
@@ -34,7 +35,8 @@
         <th></th>
     </tr>
 
-    @foreach (var item in Model) {
+    @foreach (var item in Model)
+    {
         <tr>
             <td>
                 @Html.DisplayFor(modelItem => item.RestaurantName)
@@ -67,4 +69,4 @@
 
 </table>
 Page @(Model.PageCount < Model.PageNumber ? 0 : Model.PageNumber) of @Model.PageCount
-@Html.PagedListPager(Model, page => Url.Action("Index", new {page, sort = ViewBag.CurrentSort, search = ViewBag.CurrentSearch }))
+@Html.PagedListPager(Model, page => Url.Action("Index", new { page, sort = ViewBag.CurrentSort, search = ViewBag.CurrentSearch }))
