--- a/RevViews/RevViews/Views/Shared/_ReviewsByIDToList.cshtml
+++ b/RevViews/RevViews/Views/Shared/_ReviewsByIDToList.cshtml
@@ -1,10 +1,11 @@
 ﻿@model IEnumerable<Review>
 @{
-    var reviews = (IEnumerable<Review>) @ViewBag.rev;
+    var reviews = (IEnumerable<Review>)@ViewBag.rev;
 }
-
+@Html.ActionLink("Create New", "../Reviews/Create", new{ restID = reviews.First().RestaurantID })
 <table>
-    @foreach (var item in reviews) {
+    @foreach (var item in reviews)
+    {
         <tr>
             <dl class="dl-horizontal">
 
@@ -47,7 +48,8 @@
                 <dd>
                     @Html.DisplayFor(modelItem => item.ReviewedOn)
                 </dd>
-
+                @Html.ActionLink("Edit", "../Reviews/Edit/"+item.ReviewID)
+                @Html.ActionLink("Delete", "../Reviews/Delete", new { id = item.ReviewID })
             </dl>
         </tr>
     }
