--- a/RevViews/RevViews/Views/Reviews/Create.cshtml
+++ b/RevViews/RevViews/Views/Reviews/Create.cshtml
@@ -16,10 +16,11 @@
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="form-group">
-            @Html.LabelFor(model => model.RestaurantID, "RestaurantID", htmlAttributes: new { @class = "control-label col-md-2" })
+            <label class="control-label col-md-2" for="RestaurantID">Restaurant Name: </label>
+            <p>      <strong>@ViewBag.RestaurantName </strong> </p>
             <div class="col-md-10">
-                @Html.DropDownList("RestaurantID", null, htmlAttributes: new { @class = "form-control" })
-                @Html.ValidationMessageFor(model => model.RestaurantID, "", new { @class = "text-danger" })
+                @*@Html.HiddenFor(model=>model.RestaurantID, (int) ViewBag.RestaurantID)*@
+                <input type="hidden" name="RestaurantID" value="@((int)ViewBag.RestaurantID)">
             </div>
         </div>
 
