Improved Edit functionality.

--- a/RevViews/RevViews/Views/Restaurants/Details.cshtml
+++ b/RevViews/RevViews/Views/Restaurants/Details.cshtml
@@ -23,11 +23,11 @@
         </dd>
         
         <dt>
-            @Html.DisplayNameFor(model => model.Rating)
+            Rating @*FormatThis*@
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.Rating)
+            @Model.Rating() @*FormatThis*@
         </dd>
 
         <dt>
