ReSharper Code Cleanup

--- a/RevViews/RevViews/Views/Home/Index.cshtml
+++ b/RevViews/RevViews/Views/Home/Index.cshtml
@@ -5,7 +5,9 @@
 <div class="jumbotron">
     <h1>RevViews</h1>
     <p class="lead">RevViews aims to be the one stop shop for all your review needs.</p>
-    <p><a href="/Home/About" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
+    <p>
+        <a href="/Home/About" class="btn btn-primary btn-lg">Learn more &raquo;</a>
+    </p>
 </div>
 
 <div class="row">
@@ -14,9 +16,11 @@
         <p>
             Currently we offer the abillity for users to crowdsource their collective
             experiences to find out which places are all the rave, and which places one
-            should avoid.  Have a story? Share your story!
+            should avoid. Have a story? Share your story!
         </p>
-        <p><a class="btn btn-default" href="/Restaurants">Participate &raquo;</a></p>
+        <p>
+            <a class="btn btn-default" href="/Restaurants">Participate &raquo;</a>
+        </p>
     </div>
     <div class="col-md-4">
         <h2></h2>
