--- a/RevViews/RevViews/Views/Restaurants/Details.cshtml
+++ b/RevViews/RevViews/Views/Restaurants/Details.cshtml
@@ -8,9 +8,9 @@
 
 <div>
     <h4>Restaurant</h4>
-    <hr />
+    <hr/>
     <p>
-        @Html.ActionLink("Edit", "Edit", new { id = Model.RestaurantID }) |
+        @Html.ActionLink("Edit", "Edit", new {id = Model.RestaurantID}) |
         @Html.ActionLink("Back to List", "Index")
     </p>
     <dl class="dl-horizontal">
@@ -21,7 +21,7 @@
         <dd>
             @Html.DisplayFor(model => model.RestaurantName)
         </dd>
-        
+
         <dt>
             Rating @*FormatThis*@
         </dt>
@@ -64,4 +64,4 @@
     </dl>
 </div>
 
-@Html.Partial("_ReviewsByIDToList", (IEnumerable<RevViews.Models.Review>)@ViewBag.rev)
+@Html.Partial("_ReviewsByIDToList", (IEnumerable<Review>) ViewBag.rev)
