--- a/RevViews/RevViews/Views/Reviews/Create.cshtml
+++ b/RevViews/RevViews/Views/Reviews/Create.cshtml
@@ -16,12 +16,12 @@
         <hr/>
         @Html.ValidationSummary(true, "", new {@class = "text-danger"})
         <div class="form-group">
-            <label class="control-label col-md-2" for="RestaurantID">Restaurant Name: </label>
+            @Html.LabelFor(model => model.RestaurantID,"Restaurant Name", new { @class = "control-label col-md-2" })
             <p>
-                <strong>@ViewBag.RestaurantName </strong>
+                <strong class = "col-md-2 lead">@ViewData["RestaurantName"] </strong>
             </p>
             <div class="col-md-10">
-                <input type="hidden" name="RestaurantID" value="@((int) ViewBag.RestaurantID)">
+                <input type="hidden" name="RestaurantID" value="@((int) ViewData["RestaurantID"])">
             </div>
         </div>
 
@@ -60,8 +60,8 @@
         <div class="form-group">
             @Html.LabelFor(model => model.ReviewedOn, new {@class = "control-label col-md-2"})
             <div class="col-md-10">
-                @Html.EditorFor(model => model.ReviewedOn, new {htmlAttributes = new {@class = "form-control"}})
-                @Html.ValidationMessageFor(model => model.ReviewedOn, "", new {@class = "text-danger"})
+                @Html.HiddenFor(model => model.ReviewedOn, new { @Value = DateTime.Today })
+                <p class="lead" >@DateTime.Today.ToString("d")</p>
             </div>
         </div>
 
@@ -74,7 +74,7 @@
 }
 
 <div>
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Back to List", ("../Restaurants/Details/"+ ViewData["RestaurantID"]))
 </div>
 
 @section Scripts {
