--- a/RevViews/RevViews/Views/Reviews/Edit.cshtml
+++ b/RevViews/RevViews/Views/Reviews/Edit.cshtml
@@ -55,8 +55,8 @@
     <div class="form-group">
         @Html.LabelFor(model => model.ReviewedOn, new { @class = "control-label col-md-2" })
         <div class="col-md-10">
-            @Html.EditorFor(model => model.ReviewedOn, new { htmlAttributes = new { @class = "form-control" } })
-            @Html.ValidationMessageFor(model => model.ReviewedOn, "", new { @class = "text-danger" })
+            @Html.HiddenFor(model => model.ReviewedOn)
+            @Html.DisplayFor(model => model.ReviewedOn)
         </div>
     </div>
 
@@ -69,7 +69,7 @@
 }
 
 <div>
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Back to List", ("../Restaurants/Details/"+Model.RestaurantID))
 </div>
 
 @section Scripts {
