--- a/RevViews/RevViews/Views/Home/About.cshtml
+++ b/RevViews/RevViews/Views/Home/About.cshtml
@@ -1,7 +1,8 @@
 ﻿@{
     ViewBag.Title = "About";
 }
-<h2>@ViewBag.Title.</h2>
-<h3>@ViewBag.Message</h3>
+<h2>Welcome to RevViews</h2>
+<h3>Your one stop shop for all your review needs.</h3>
 
-<p>Use this area to provide additional information.</p>
+<p>With a clean modern and simplistic interface, we make it easy for you to collaborate and share your story with other like-minded individuals.  Together you are able to watch out for one another and share the best and worst experiences you have had with a product or place.</p>
+<p>While right now we only have the implementation for RevViewing restaurants, we hope to ad more coverage in the future to become your one stop shop for all your review needs.</p>
