--- a/RevViews/RevViews/Views/Home/Index.cshtml
+++ b/RevViews/RevViews/Views/Home/Index.cshtml
@@ -29,7 +29,7 @@
         <p></p>
     </div>
     <div class="col-md-4">
-        <h2>Top 3</h2>
+        <h2>Top 3 Restaurants</h2>
         <ol>
         @foreach (Restaurant r in top3)
         {
