--- a/RevViews/RevViews/Views/Shared/_ContactUs.cshtml
+++ b/RevViews/RevViews/Views/Shared/_ContactUs.cshtml
@@ -42,10 +42,10 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.SubmissionDate, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10 lead">
-                @Html.DisplayFor(model => model.SubmissionDate, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.SubmissionDate, "", new { @class = "text-danger" })
+            @Html.LabelFor(model => model.SubmissionDate, new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.HiddenFor(model => model.SubmissionDate, new { @Value = DateTime.Today })
+                <p class="lead">@DateTime.Today.ToString("d")</p>
             </div>
         </div>
 
